# ok_rust

./: .env  Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs  repositories.rs  routes.rs  services.rs
src/db/: connection.rs
src/handlers/: brand_handler.rs  product_handler.rs  user_handler.rs
src/models/: brand.rs  product.rs  user.rs
src/repositories/: brand_repository.rs  product_repository.rs  user_repository.rs
src/routes/: brand_routes.rs  product_routes.rs  user_routes.rs
src/services/: brand_service.rs  product_service.rs  user_service.rs
